--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.65
+@version        1.13.66
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1320,8 +1320,9 @@ pre, /* Code pages like https://commons.wikimedia.org/wiki/User:Redditor098/vect
 	color: lightblue !important;
 }
 
-/* constructor call */
-.java5.source-java5 .kw166 {
+.mw-changeslist-line-inner .newpage, /* "N" letter at Watchlist https://en.wikipedia.org/wiki/Special:Watchlist?hidepreviousrevisions=1&hidecategorization=1&hideWikibase=1&limit=250&days=3&urlversion=2 */
+.java5.source-java5 .kw166 /* constructor call */
+{
 	color: lightseagreen;
 }
 
