--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.69
+@version        1.13.70
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -151,6 +151,7 @@ a[title='Log out'],
 .oo-ui-iconElement-icon.oo-ui-icon-linkExternal, /* Wikipedia: "Add a citation" popup: link field: drop the icon at the left */
 .oo-ui-iconElement-icon.oo-ui-icon-search, /* Wikipedia: "Add a citation" popup: "Find field" input: drop the icon at the left */
 .mw-changeslist-legend, /* Watchlist: legend with "List of abbreviations" */
+.mw-rcfilters-ui-watchlistTopSectionWidget-separator, /* Watchlist: separator line horizontal https://en.wikipedia.org/wiki/Special:Watchlist?hidepreviousrevisions=1&hidecategorization=1&hideWikibase=1&limit=250&days=3&urlversion=2 */
 .mw-newarticletext div[style*='background:#F8FFFF']:first-child /* Help text in Wiktionary edit screen */
 {
 	display: none !important;
