--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.70
+@version        1.13.71
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1227,9 +1227,12 @@ li[role='option'],
 
 }
 
+.ve-init-mw-desktopArticleTarget-toolbar,
 /* Wikipedia: editing: top toolbar with search-and-replace
  * without it - its a few chars outside of the screen */
-.ve-init-mw-desktopArticleTarget-toolbar
+
+.client-js .mw-changeslist ul
+/* Watchlist https://en.wikipedia.org/wiki/Special:Watchlist?hidepreviousrevisions=1&hidecategorization=1&hideWikibase=1&limit=250&days=3&urlversion=2 */
 {
 	margin: 0;
 }
