--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.83
+@version        1.13.84
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -616,6 +616,9 @@ tr[style='text-align: center;'] td[style='font-weight: bold;'] .hlist div[role='
 tr[style='vertical-align:top;'] td[style='border-right: 1px dotted #aaa;'] div[style='font-weight: bold;'],
 tr[style='vertical-align:top;'] td[width='50%'] div[role='heading'],
 /* Subtitles of "Summary of Video games WikiProject open tasks" https://en.wikipedia.org/wiki/Wikipedia_talk:WikiProject_Video_games */
+
+.wpvg-sidebar table.mw-collapsible.mw-made-collapsible,
+/* Subtitles https://en.wikipedia.org/wiki/Wikipedia_talk:WikiProject_Video_games */
 
 [style='background: #F9F9F9; border-width:1px; border-color: #ababab; padding: 0px; width: 100%;'] .mw-collapsible.mw-made-collapsible th[colspan='2'], /* Right https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
 [style='width: 77%; vertical-align:top;border: 1px solid #AAAAAA; background-color:white;'] [style='width: 50%'], /* https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
