--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.13.89
+@version        1.13.90
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1263,6 +1263,7 @@ li[role='option'],
 /* Wikipedia: editing: top toolbar with search-and-replace
  * without it - its a few chars outside of the screen */
 
+.mw-contributions-list, /* https://www.wikidata.org/w/index.php?title=Special:NewPages&hidepatrolled=0&username=Vitaly+Zdanevich */
 .client-js .mw-changeslist ul
 /* Watchlist https://en.wikipedia.org/wiki/Special:Watchlist?hidepreviousrevisions=1&hidecategorization=1&hideWikibase=1&limit=250&days=3&urlversion=2 */
 {
