Text color fix in a table

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.14.03
+@version        1.14.04
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1184,6 +1184,8 @@ div.mw-heading.mw-heading2 + div i,
 .mw-tag-marker.mw-tag-marker-wikidata-ui, /* "Wikidata user interface" https://www.wikidata.org/wiki/Special:Contributions/Vitaly_Zdanevich */
 
 .mw-tag-wikidata-ui .comment, /* https://www.wikidata.org/w/index.php?title=Special:NewPages&hidepatrolled=0&username=Vitaly+Zdanevich */
+
+small[style='color:var(--color-subtle, #54595d);'], /* https://ru.wikipedia.org/wiki/Евротур_(фильм)#В_ролях */
 
 .block-indent /* https://be.wikipedia.org/wiki/Вікіпедыя:Адказы_на_частую_крытыку */
 {
