Commons: file editing page: drop "File"

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.14.04
+@version        1.14.05
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -156,6 +156,8 @@ a[title='Log out'],
 
 .talkheader-body .talkheader-help,
 /* "Put new text under old text. Click here to start a new topic." https://en.wikipedia.org/wiki/Wikipedia_talk:WikiProject_Video_games */
+
+.mw-page-title-namespace, /* "File" https://commons.wikimedia.org/w/index.php?title=File:Иркутская_жизнь,_1914,_№010.pdf&action=edit */
 
 .mw-newarticletext div[style*='background:#F8FFFF']:first-child /* Help text in Wiktionary edit screen */
 {
