--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.14.17
+@version        1.14.18
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -364,6 +364,8 @@ tr,
 .oo-ui-menuSelectWidget, /* Dropdown at the right of "Watch this page" https://commons.wikimedia.org/w/index.php?title=Category:50_rubles_banknotes&action=edit */
 .ve-ui-expandableContent-toggle, /* Wikipedia: template popup (for example when adding a ref manually): "More" buttons */
 div[style='background:var(--background-color-success-subtle,#F1FCF1); color:var(--color-base,#202122);padding:0 .25em'], /* Top nav https://commons.wikimedia.org/wiki/Category:Euphorbia_canariensis */
+.mw-parser-output .ts-Общение-wrapper, /* Top nav https://ru.wikipedia.org/wiki/Википедия:Запросы_к_ботоводам */
+.mw-parser-output .ts-Box, /* Top nav https://ru.wikipedia.org/wiki/Википедия:Запросы_к_ботоводам */
 .mw-parser-output .category-redirect-content
 {
 	background: #000 !important;
@@ -1209,6 +1211,11 @@ small[style='color:var(--color-subtle, #54595d);'], /* https://ru.wikipedia.org/
 .tmpl-raaf-heading,
 .tmpl-raaf-comment,
 .tmpl-raaf-cell.is-user,
+
+/* Top nav https://ru.wikipedia.org/wiki/Википедия:Запросы_к_ботоводам */
+.ts-shortcut-indicator.hlist.inline,
+.ts-Общение-piped,
+.ts-Box-description,
 
 .block-indent /* https://be.wikipedia.org/wiki/Вікіпедыя:Адказы_на_частую_крытыку */
 {
