--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.14.18
+@version        1.14.19
 @description    Black, remove elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -364,6 +364,7 @@ tr,
 .oo-ui-menuSelectWidget, /* Dropdown at the right of "Watch this page" https://commons.wikimedia.org/w/index.php?title=Category:50_rubles_banknotes&action=edit */
 .ve-ui-expandableContent-toggle, /* Wikipedia: template popup (for example when adding a ref manually): "More" buttons */
 div[style='background:var(--background-color-success-subtle,#F1FCF1); color:var(--color-base,#202122);padding:0 .25em'], /* Top nav https://commons.wikimedia.org/wiki/Category:Euphorbia_canariensis */
+th div[style='background: lightsteelblue; margin: 2px 2px 0px 2px; padding: 1px 1px 2px 1px;'], /* Infobox https://be-tarask.wikipedia.org/wiki/Бой_за_Вострава */
 .mw-parser-output .ts-Общение-wrapper, /* Top nav https://ru.wikipedia.org/wiki/Википедия:Запросы_к_ботоводам */
 .mw-parser-output .ts-Box, /* Top nav https://ru.wikipedia.org/wiki/Википедия:Запросы_к_ботоводам */
 .mw-parser-output .category-redirect-content
@@ -648,6 +649,9 @@ td[style='border: 2px solid var(--color-emphasized, #000); padding: 0.2em; ;'], 
 .mw-mmv-filename-prefix, /* "Файл:" https://ru.wikipedia.org/w/index.php?title=Римский-Корсаков%2C_Воин_Андреевич#/media/Файл:Живописне_обозрение_1872_-_1873page379.webp */
 
 .mw-json, /* https://ru.wikipedia.org/wiki/Википедия:AutoWikiBrowser/CheckPageJSON */
+
+table[style='width: 315px; margin: 0 0 1em 1em; clear: right; border: 1px #aaa solid; border-collapse: collapse; font-size: 85%; background-color: #f9f9f9;'],
+/* Infobox https://be-tarask.wikipedia.org/wiki/Бой_за_Вострава */
 
 [style='background: #F9F9F9; border-width:1px; border-color: #ababab; padding: 0px; width: 100%;'] .mw-collapsible.mw-made-collapsible th[colspan='2'], /* Right https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
 [style='width: 77%; vertical-align:top;border: 1px solid #AAAAAA; background-color:white;'] [style='width: 50%'], /* https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
@@ -1216,6 +1220,8 @@ small[style='color:var(--color-subtle, #54595d);'], /* https://ru.wikipedia.org/
 .ts-shortcut-indicator.hlist.inline,
 .ts-Общение-piped,
 .ts-Box-description,
+
+blockquote, /* https://be-tarask.wikipedia.org/wiki/Бой_за_Вострава */
 
 .block-indent /* https://be.wikipedia.org/wiki/Вікіпедыя:Адказы_на_частую_крытыку */
 {
